@@ -58,9 +58,9 @@
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile="Debug\ardea.pch"
 				BrowseInformation="0"
-				WarningLevel="0"
+				WarningLevel="1"
 				SuppressStartupBanner="true"
-				DebugInformationFormat="0"
+				DebugInformationFormat="3"
 				CompileAs="0"
 			/>
 			<Tool
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\bordm.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\bundle.cpp"
 				>
 			</File>
@@ -344,6 +348,10 @@
 			</File>
 			<File
 				RelativePath="..\src\isbiad.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\iskive.cpp"
 				>
 			</File>
 			<File
