@@ -52,7 +52,7 @@
 				UsePrecompiledHeader="0"
 				BrowseInformation="0"
 				WarningLevel="1"
-				DebugInformationFormat="0"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -211,6 +211,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\bordm.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\bundle.cpp"
 				>
 			</File>
@@ -320,6 +324,10 @@
 			</File>
 			<File
 				RelativePath="..\src\isbiad.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\iskive.cpp"
 				>
 			</File>
 			<File
