@@ -27,37 +27,37 @@ Global
 		Release|Win32 = Release|Win32
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0F}.Debug|Win32.ActiveCfg = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0F}.Debug|Win32.Build.0 = Release|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0F}.Debug|Win32.ActiveCfg = Debug|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0F}.Debug|Win32.Build.0 = Debug|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0F}.Release|Win32.ActiveCfg = Release|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0F}.Release|Win32.Build.0 = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0E}.Debug|Win32.ActiveCfg = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0E}.Debug|Win32.Build.0 = Release|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0E}.Debug|Win32.ActiveCfg = Debug|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0E}.Debug|Win32.Build.0 = Debug|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0E}.Release|Win32.ActiveCfg = Release|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0E}.Release|Win32.Build.0 = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0B}.Debug|Win32.ActiveCfg = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0B}.Debug|Win32.Build.0 = Release|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0B}.Debug|Win32.ActiveCfg = Debug|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0B}.Debug|Win32.Build.0 = Debug|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0B}.Release|Win32.ActiveCfg = Release|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0B}.Release|Win32.Build.0 = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0D}.Debug|Win32.ActiveCfg = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0D}.Debug|Win32.Build.0 = Release|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0D}.Debug|Win32.ActiveCfg = Debug|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0D}.Debug|Win32.Build.0 = Debug|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0D}.Release|Win32.ActiveCfg = Release|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0D}.Release|Win32.Build.0 = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0C}.Debug|Win32.ActiveCfg = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0C}.Debug|Win32.Build.0 = Release|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0C}.Debug|Win32.ActiveCfg = Debug|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0C}.Debug|Win32.Build.0 = Debug|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0C}.Release|Win32.ActiveCfg = Release|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7AB0C}.Release|Win32.Build.0 = Release|Win32
-		{C5EE61F0-0EF6-431A-90C1-3F6FF3F5B614}.Debug|Win32.ActiveCfg = Release|Win32
+		{C5EE61F0-0EF6-431A-90C1-3F6FF3F5B614}.Debug|Win32.ActiveCfg = Debug|Win32
 		{C5EE61F0-0EF6-431A-90C1-3F6FF3F5B614}.Release|Win32.ActiveCfg = Release|Win32
-		{1BF44EB1-E02B-4F85-BC0F-33AAC503BA13}.Debug|Win32.ActiveCfg = Release|Win32
-		{1BF44EB1-E02B-4F85-BC0F-33AAC503BA13}.Debug|Win32.Build.0 = Release|Win32
+		{1BF44EB1-E02B-4F85-BC0F-33AAC503BA13}.Debug|Win32.ActiveCfg = Debug|Win32
+		{1BF44EB1-E02B-4F85-BC0F-33AAC503BA13}.Debug|Win32.Build.0 = Debug|Win32
 		{1BF44EB1-E02B-4F85-BC0F-33AAC503BA13}.Release|Win32.ActiveCfg = Release|Win32
 		{1BF44EB1-E02B-4F85-BC0F-33AAC503BA13}.Release|Win32.Build.0 = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7BAE0}.Debug|Win32.ActiveCfg = Release|Win32
-		{360DF97D-FEAB-4A6F-B84F-E348FCA7BAE0}.Debug|Win32.Build.0 = Release|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7BAE0}.Debug|Win32.ActiveCfg = Debug|Win32
+		{360DF97D-FEAB-4A6F-B84F-E348FCA7BAE0}.Debug|Win32.Build.0 = Debug|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7BAE0}.Release|Win32.ActiveCfg = Release|Win32
 		{360DF97D-FEAB-4A6F-B84F-E348FCA7BAE0}.Release|Win32.Build.0 = Release|Win32
-		{8B00104E-D878-4579-9E4D-801860997AB3}.Debug|Win32.ActiveCfg = Release|Win32
+		{8B00104E-D878-4579-9E4D-801860997AB3}.Debug|Win32.ActiveCfg = Debug|Win32
 		{8B00104E-D878-4579-9E4D-801860997AB3}.Release|Win32.ActiveCfg = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
