@@ -61,7 +61,7 @@
 				BrowseInformation="0"
 				WarningLevel="2"
 				SuppressStartupBanner="true"
-				DebugInformationFormat="0"
+				DebugInformationFormat="3"
 				CompileAs="0"
 			/>
 			<Tool
@@ -237,6 +237,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\bordm.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\bundle.cpp"
 				>
 			</File>
@@ -346,6 +350,10 @@
 			</File>
 			<File
 				RelativePath="..\src\isbiad.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\iskive.cpp"
 				>
 			</File>
 			<File
