@@ -50,7 +50,7 @@
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="1"
-				DebugInformationFormat="0"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -206,6 +206,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\bordm.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\bundle.cpp"
 				>
 			</File>
@@ -319,6 +323,10 @@
 			</File>
 			<File
 				RelativePath="..\src\isbiad.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\iskive.cpp"
 				>
 			</File>
 			<File
